tester_ft/log/compile_error_vec_15.txt
-VECTOR INSERT POS TEST-

./tmp/outfile_vec_15.cpp:33:38: error: no member named 'begin' in 'ft::vector<int>'
                ft::vector<int>::iterator its = v2.begin() + it_pos;
                                                ~~ ^
./tmp/outfile_vec_15.cpp:35:41: error: no member named 'insert' in 'ft::vector<int>'
                ft::vector<int>::iterator res_ft = v2.insert(its, N);
                                                   ~~ ^
./tmp/outfile_vec_15.cpp:38:43: error: no member named 'begin' in 'ft::vector<int>'
                if (res_std - v1.begin() != res_ft - v2.begin())
                                                     ~~ ^
./tmp/outfile_vec_15.cpp:44:42: error: no member named 'begin' in 'ft::vector<int>'
                if (!std::equal(v1.begin(),v1.end(),v2.begin()))
                                                    ~~ ^
./tmp/outfile_vec_15.cpp:64:6: error: no member named 'insert' in 'ft::vector<int>'
                v2.insert(v2.begin(), N);
                ~~ ^
./tmp/outfile_vec_15.cpp:64:16: error: no member named 'begin' in 'ft::vector<int>'
                v2.insert(v2.begin(), N);
                          ~~ ^
6 errors generated.
